Basic vision comms wrapper (not quite finished) This adds a rough interface for connecting to and receiving vision data, and so far it *appears* to be working (i.e. mock client sends data and no errors are reported on either side).
Further work: flesh out the rest of the interface and verify integrity
of the data.

--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj.filters
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="LolaCommsNative.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="VisionListener.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LolaCommsNative.h" />
@@ -123,6 +124,8 @@
     <ClInclude Include="iface\include\sd_LOLA_uEIDN.h">
       <Filter>iface</Filter>
     </ClInclude>
+    <ClInclude Include="sock_utils.h" />
+    <ClInclude Include="VisionListener.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="iface\include\README.txt">
