Obstacle & debug log marshalling Part of issue #1
This provides the necessary infrastructure to handle passing received
Obstacle messages through to the managed layer, as well as some utility
stuff to make getting debug messages from the native layer a little
easier.

Obstacles are passed by-value through reverse PInvoke to the managed
side, which lets us rely on the GC to clean up for us there, and means
we don't need to worry about hanging onto obstacles on the native side
after they've been passed through. This all happens on a background
thread, and later (not implemented yet) the obstacles will get
picked up by the UI thread for rendering.

A downside of the PInvoke approach is we need to mirror any C/C++
structs we use with C# structs on the managed side. The main alternative
to avoid this is to use a C++/CLI wrapper between the C# and native C++
layers, but this doesn't seem to be supported by Unity at the moment.

--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
@@ -134,12 +134,16 @@
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <CompileAsWinRT>false</CompileAsWinRT>
+      <PreprocessorDefinitions>LOLACOMMSNATIVEDLL_EXPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /F /Y /V $(OutputPath)$(TargetFileName) $(SolutionDir)\..\..\HoLola\Assets\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -232,6 +236,7 @@
     <ClInclude Include="iface\include\iface_wpatt_lola.hpp" />
     <ClInclude Include="iface\include\iface_wstab_to_wpatt.hpp" />
     <ClInclude Include="iface\include\sd_LOLA_uEIDN.h" />
+    <ClInclude Include="Logging.h" />
     <ClInclude Include="LolaCommsNative.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="sock_utils.h" />
