Basic infrastructure for native ETW tracing This includes the manifest and necessary build steps to generate ETW tracing code and bundle it into the LolaCommsNative DLL. Something seems to still be missing, though, since we never show up in the list of registered providers in the device portal. Maybe the manifest needs some additional UWP-specific settings?

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,8 @@ HoLola.sln
 Package.StoreAssociation.xml
 _pkginfo.txt
 *.appx
+*.[Bb][Ii][Nn]
+*.res
 
 # ignore files ending in cache, but not directories
 *.[Cc]ache
