--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
@@ -144,6 +144,10 @@
     <PostBuildEvent>
       <Command>xcopy /F /Y /V $(OutputPath)$(TargetFileName) $(SolutionDir)\..\..\HoLola\Assets\</Command>
     </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>mc -um $(ProjectName).man -h $(ProjectDir) -z $(ProjectName)ETW
+rc $(ProjectName)ETW.rc</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -155,6 +159,13 @@
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
     </Link>
+    <PreBuildEvent>
+      <Command>mc -um $(ProjectName).man -h $(ProjectDir) -z $(ProjectName)ETW
+rc $(ProjectName)ETW.rc</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>xcopy /F /Y /V $(OutputPath)$(TargetFileName) $(SolutionDir)\..\..\HoLola\Assets\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
     <ClCompile>
@@ -238,6 +249,7 @@
     <ClInclude Include="iface\include\sd_LOLA_uEIDN.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="LolaCommsNative.h" />
+    <ClInclude Include="LolaCommsNativeETW.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="sock_utils.h" />
     <ClInclude Include="targetver.h" />
@@ -261,6 +273,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="iface\include\sig_commands.i" />
+    <None Include="LolaCommsNative.man" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LolaCommsNativeETW.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
