Surface support This adds basic support for 1-sided polygons to render surfaces (issue

--- a/net/LolaComms/LolaComms/LolaComms.csproj
+++ b/net/LolaComms/LolaComms/LolaComms.csproj
@@ -89,6 +89,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="SurfaceMessage.cs" />
     <Compile Include="VisionListener.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="ObstacleMessage.cs" />
