Port FootstepListener issue #9 This includes the native FootstepListener class, which will handle all the details for subscribing to and collecting footstep data from the robot.
Still to-do: managed wrapper and plumbing to tie everything together.

--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
@@ -213,6 +213,7 @@ rc $(ProjectName)ETW.rc</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="FootstepListener.h" />
     <ClInclude Include="iface\include\begin_pack.h" />
     <ClInclude Include="iface\include\end_pack.h" />
     <ClInclude Include="iface\include\iface.h" />
