--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj.filters
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj.filters
@@ -128,6 +128,7 @@
     <ClInclude Include="VisionListener.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="LolaCommsNativeETW.h" />
+    <ClInclude Include="FootstepListener.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="iface\include\README.txt">
