Native API for Footstep & Pose data Necessary plumbing for issues #9 and #10

--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
@@ -253,6 +253,7 @@ rc $(ProjectName)ETW.rc</Command>
     <ClInclude Include="LolaCommsNative.h" />
     <ClInclude Include="LolaCommsNativeETW.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PoseListener.h" />
     <ClInclude Include="sock_utils.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VisionListener.h" />
