Managed PoseListener C# PoseListener wrapper for issue #10

--- a/net/LolaComms/LolaComms/LolaComms.csproj
+++ b/net/LolaComms/LolaComms/LolaComms.csproj
@@ -89,6 +89,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Footstep.cs" />
+    <Compile Include="HR_Pose.cs" />
+    <Compile Include="PoseListener.cs" />
     <Compile Include="SurfaceMessage.cs" />
     <Compile Include="VisionListener.cs" />
     <Compile Include="Common.cs" />
