Improve FootstepListener's behavior with non-footstep messages This should resolve issue #16. This adds some additional logging to record the contents of *every* MsgHeader at the time we receive it, and adds some logic to the recv process to allow us to read past messages larger than our buffer (since we're only interested in footstep messages, which have a fixed size, we shouldn't need to resize the buffer used by FootstepListener).

--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj.filters
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj.filters
@@ -129,6 +129,7 @@
     <ClInclude Include="Logging.h" />
     <ClInclude Include="LolaCommsNativeETW.h" />
     <ClInclude Include="FootstepListener.h" />
+    <ClInclude Include="PoseListener.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="iface\include\README.txt">
