Make includes consistent across all configurations for LolaCommsNative

--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.vcxproj
@@ -107,6 +107,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
+    <IncludePath>$(ProjectDir)iface\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
